# gemini-channels-agent

./: .gitignore  Dockerfile  HACKATHON.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  tools.py
app/: streamlit_app.py
scripts/: run_local_demo.sh
tests/: test_agent.py
